Added functionality to change class names of the component if a multiline prop is added.
Multiline changes view and css of component to be
able to display the textbox on multiple lines.

--- a/application-tracker/src/component-css/TextBox.css
+++ b/application-tracker/src/component-css/TextBox.css
@@ -1,5 +1,13 @@
-.text-box-container {
+.text-box-single-line-container {
     display: flex;
+}
+
+.text-box-multi-line-container {
+    display: block;
+}
+
+.multi-line-text-box {
+    white-space: pre-wrap;
 }
 
 .text-box-text {
